# vertex

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  README.md
cmake/: vertexConfig.cmake
include/merkle/: Array.h  Forest.h  Iterator.h  Node.h  Tree.h
include/vertex/: Array.h  BfsEdgeIterator.h  BreadthFirstTraversal.h  BredthFirstTraversal.h  Edge.h  EdgeIterator.h  EdgeTargetIterator.h  Forest.h  InOrderTraversal.h  Iterator.h  Link.h  LinkIterator.h  ManagedContainer.h  ManagedVertexMap.h  Node.h  NodeIterator.h  PostOrderTraversal.h  PreOrderTraversal.h  Predicate.h  Traversal.h  Tree.h  TrivialIterator.h  Vertex.h  VertexIterator.h  VertexMap.h  VertexStore.h
src/: Array.cpp  BfsEdgeIterator.cpp  BreadthFirstTraversal.cpp  Edge.cpp  EdgeIterator.cpp  EdgeTargetIterator.cpp  Forest.cpp  Iterator.cpp  Link.cpp  LinkedList.cpp  ManagedVertexMap.cpp  Node.cpp  NodeIterator.cpp  PostOrderTraversal.cpp  PreOrderTraversal.cpp  Tree.cpp  Vertex.cpp  VertexMap.cpp  VertexStore.cpp
test/: Array.cpp  Forest.cpp  Forest.h  Iterator.cpp  Link.cpp  LinkIterator.cpp  Node.cpp  Node.h  TestArray.cpp  TestBfsEdgeIterator.cpp  TestBredthFirstTraversal.cpp  TestEdgeTargetIterator.cpp  TestForest.cpp  TestForest.h  TestInOrderTraversal.cpp  TestIterator.cpp  TestNode.cpp  TestNode.h  TestTraversal.cpp  TestTree.cpp  TestTree.h  TestVertex.cpp  TestVertex.h  Traversal.cpp  Tree.cpp  Tree.h  Vertex.cpp  Vertex.h  clang-tidy.ignore
vertex/: Array.h  BreadthFirstTraversal.cpp  BreadthFirstTraversal.h  Edge.h  EdgeIterator.h  Forest.cpp  InOrderTraversal.cpp  InOrderTraversal.h  Iterator.cpp  Iterator.h  IteratorRecorder.h  IteratorTransformer.h  Link.h  LinkIterator.cpp  LinkIterator.h  LinkedList.cpp  LinkedList.h  ManagedContainer.cpp  ManagedContainer.h  Node.h  PathMap.cpp  PathMap.h  PathPredicate.cpp  PathPredicate.h  PathResolver.cpp  PathResolver.h  PostOrderTraversal.h  PreOrderTraversal.h  Predicate.cpp  Predicate.h  SequencePredicate.h  Traversal.h  Tree.cpp  Tree.h  TrivialIterator.cpp  VertexIterator.cpp  array.cpp  array.h  breadth_first_traversal.cpp  breadth_first_traversal.h  (+37 more)
vertex/test/: Array.cpp  Link.cpp  Link.h  LinkIterator.cpp  Node.cpp  Node.h  PathMap.cpp  PathPredicate.cpp  PathResolver.cpp  Traversal.cpp  Tree.cpp  Tree.h  array.cpp  clang-tidy.ignore  link.cpp  link.h  link_iterator.cpp  node.cpp  node.h  path_map.cpp  traversal.cpp  tree.h
